cmake_minimum_required(VERSION 3.3)
project(TestWxWidgets)
aux_source_directory(. SRC_LIST)
set(wxWidgets_ROOT_DIR "C:/wxWidgets-3.1.0/")
set(wxWidgets_CONFIGURATION mswu)
find_package(wxWidgets COMPONENTS core base REQUIRED)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(SOURCE_FILES main.cpp testWxwidgets.cpp testWxwidgets.h)
include(${wxWidgets_USE_FILE})
add_executable(${PROJECT_NAME} ${SRC_LIST} TestFrame.cpp TestFrame.h)
target_link_libraries(${PROJECT_NAME} ${wxWidgets_LIBRARIES})